3.007 

    [ENHANCEMENTS]
    
    - Class/Role/Module in the global scope aliased as Joose.Class/Joose.Role/Joose.Module
    - Joose no longer overwrites the Class/Role/Module symbols in global scope (should allow Prototype support)
    
    
    [BUG FIXES]
    
    - fixed bug, when traits weren't applied to the class with already detached meta 
    (when the meta already had traits) 


3.006   Mon, Feb 22, 2010

    [ENHANCEMENTS]
    
    - Added 'Changes' log
    - the actual slot, to which the attribute of the class is applied became configurable
      this will allow to have nicer "private" attributes and combined accessors
    - some progress on docs (mentioned custom names for accessors and 'isPrivate' option)

    
    [API CHANGES]

    -none-
    

    [BUG FIXES]
    
    -none-