@@ -2,7 +2,7 @@ Joose = function () { throw "Modules may not be instantiated." }
 
 Joose.top = this
 
-Joose.VERSION = 3.003
+Joose.VERSION = 3.007
 
 // Static helpers for Arrays
 Joose.A = {
