@@ -22,7 +22,7 @@ Joose.Managed.My = new Joose.Managed.Role('Joose.Managed.My', {
             
             var createdClass = this.myClass = Class(myExtend)
             
-            this.c.prototype.my = this.c.my = isRole ? createdClass : new createdClass({ targetMeta : this })
+            this.c.prototype.my = this.c.my = isRole ? createdClass : new createdClass({ HOST : this.c })
         }
     },
     
