@@ -75,6 +75,49 @@ Inside the method of class you can access static properties via `my` as well:
         registry.my.registerType('someTypeName', someValue)
 
 
+ACESSING HOSTING CLASS
+======================
+
+If you need to access the constructor of the hosting class from static methods, add a special static attribute `HOST`.
+During instantiation, it will be provided with the correct value: 
+
+
+        Class('FileType', {
+        
+            has : {
+                ...
+            },
+            
+            
+            methods : {
+                ...
+            },
+        
+        
+            my : {
+                has : {
+                    types   : {},
+                
+                    HOST    : null,
+                },
+                
+            
+                methods : {
+                    register : function (name, param1, param2) {
+                    
+                        // this.HOST == FileType
+                        
+                        this.types[ name ] = new this.HOST({
+                            param1 : param1,
+                            param2 : param2
+                        })
+                    }
+                }
+            }
+        })
+
+Static method `register` shown in the example will also correctly work in the subclasses of `FileType`.
+
 
 INHERITANCE OF STATIC PROPERTIES
 ================================
