@@ -2,7 +2,7 @@ Joose = function () { throw "Modules may not be instantiated." }
 
 Joose.top = this
 
-Joose.VERSION = 3.003
+Joose.VERSION = 3.007
 
 // Static helpers for Arrays
 Joose.A = {
@@ -2742,7 +2742,7 @@ Joose.Managed.My = new Joose.Managed.Role('Joose.Managed.My', {
             
             var createdClass = this.myClass = Class(myExtend)
             
-            this.c.prototype.my = this.c.my = isRole ? createdClass : new createdClass({ targetMeta : this })
+            this.c.prototype.my = this.c.my = isRole ? createdClass : new createdClass({ HOST : this.c })
         }
     },
     
